--- a/templates/city_school/login.html
+++ b/templates/city_school/login.html
@@ -77,12 +77,12 @@
           <p class="text-muted mt-3">Please ensure that your mobile is in coverage of OTP.</p>
           {% if messages %}
           <div id="messages-container" class="messages">
-            
-            <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+            {% for message in messages %}
+            <div class="alert {% if message.tags == 'error' %}alert-danger{% elif message.tags == 'success' %}alert-success{% endif %} alert-dismissible fade show" role="alert">
               {{ message }}
               <button type="button" class="btn-close" aria-label="Close"></button>
             </div>
-        
+            {% endfor %}
           </div>
           {% endif %}
 
@@ -92,20 +92,34 @@
   </div>
   <!-- Bootstrap JS -->
   <script>
+    // Function to close the alert after a specified duration
+    function closeAlert(alert) {
+      alert.classList.add('fade');
+      setTimeout(function() {
+        alert.remove();
+      }, 500); // Adjust the timeout duration as needed
+    }
+  
     // Close the alert when the close button is clicked
     document.addEventListener('DOMContentLoaded', function() {
       var alertCloseButtons = document.querySelectorAll('.btn-close');
       alertCloseButtons.forEach(function(button) {
         button.addEventListener('click', function() {
           var alert = this.closest('.alert');
-          alert.classList.add('fade');
-          setTimeout(function() {
-            alert.remove();
-          }, 500); // Adjust the timeout duration as needed
+          closeAlert(alert);
         });
+      });
+  
+      // Automatically close alerts after 5 seconds
+      var alerts = document.querySelectorAll('.alert');
+      alerts.forEach(function(alert) {
+        setTimeout(function() {
+          closeAlert(alert);
+        }, 5000); // Adjust the duration (in milliseconds) as needed
       });
     });
   </script>
+  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <!-- Font Awesome -->
