--- a/templates/city_school/dashboard.html
+++ b/templates/city_school/dashboard.html
@@ -189,11 +189,12 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="{% url 'login' %}">
                     <i class="fas fa-sign-out-alt" style="color: black;"></i>
                     <span class="nav_text" style="color: black;"> Exit</span>
                 </a>
             </li>
+            
         </ul>
     </div>
 </div>
