--- a/templates/city_school/dashboard.html
+++ b/templates/city_school/dashboard.html
@@ -188,12 +188,14 @@
                     <span class="nav_text" style="color: black;">My Students</span>
                 </a>
             </li>
+
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'login' %}">
+                <a class="nav-link" href="{% url 'logout' %}">
                     <i class="fas fa-sign-out-alt" style="color: black;"></i>
                     <span class="nav_text" style="color: black;"> Exit</span>
                 </a>
             </li>
+            
             
         </ul>
     </div>
