--- a/templates/city_school/otp.html
+++ b/templates/city_school/otp.html
@@ -77,13 +77,14 @@
           {% if messages %}
           <div id="messages-container" class="messages">
             {% for message in messages %}
-            <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+            <div class="alert {% if message.tags == 'error' %}alert-danger{% elif message.tags == 'success' %}alert-success{% else %}alert-info{% endif %} alert-dismissible fade show" role="alert">
               {{ message }}
               <button type="button" class="btn-close" aria-label="Close"></button>
             </div>
             {% endfor %}
           </div>
           {% endif %}
+
 
         </form>
       </div>
