--- a/templates/city_school/imagespecific.html
+++ b/templates/city_school/imagespecific.html
@@ -1,7 +1,13 @@
+
+{% load static %}
+{% load pwa %} 
+{% comment %} {% progressive_web_app_meta %} {% endcomment %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="manifest" href="{% static "assets/manifest.json" %}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Specific Image</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
